add figures to latex

--- a/paper_ms_method_HSCY1/ms.tex
+++ b/paper_ms_method_HSCY1/ms.tex
@@ -273,6 +273,14 @@ where $l,m$ go over the indexes of $(i,j,k,s)$.
  \includegraphics[width=0.5\textwidth]{lensing_efficiency.pdf}
  \caption{The blue line shows the normalized lensing efficiency for lens bin at $z_{l}=0.51$. The orange line is the normalized lensing efficiency while taking into account the photo-$z$ uncertainty.}
 \end{figure}
+
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.5\textwidth]{noise_std_map_pix.pdf}
+ \caption{The standard deviation map of shear measreuemnt error for the fifth source bin ($0.69 \leq z < 0.80 $).}
+\end{figure}
+
 \subsection{FISTA}
 The basic FISTA algorithms is
 \begin{equation}
